--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
     "chart.js": "^4.4.0",
-    "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
