--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-confetti-explosion": "^2.1.2",
