--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "valibot": "^0.19.0"
   },
   "devDependencies": {
     "sass": "^1.68.0"
