--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-rewards": "^2.0.4",
     "typescript": "5.2.2",
     "valibot": "^0.19.0"
   },
