--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "^13.5.4",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +29,7 @@
     "valibot": "^0.19.0"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "sass": "^1.68.0"
   }
 }
