--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-qr-code": "^2.0.12",
     "react-rewards": "^2.0.4",
     "typescript": "5.2.2",
     "valibot": "^0.19.0"
